@@ -23,33 +23,25 @@ int main(void)
           return EXIT_FAILURE;
      lpatom_init(atom2);
 
-     file = fopen("atom_positive.txt", "r");
+     file = fopen("01_lpatom_parse.txt", "r");
      s = malloc(MAXLEN);
      while ( fgets(s, MAXLEN, file) != NULL) {
           s[strlen(s)-1] = '\0';
-          printf("%-60s", s);
           if ( lpatom_parse(atom1, s) == -1) {
-               puts("\x1b[1m*fail*\x1b[0m");
                has_failed = true;
           }
           else {
                fname = lpatom_get_fullname(atom1);
                if (strcmp(fname, s) != 0) {
-                    puts("\x1b[1m*fail*\x1b[0m");
                     has_failed = true;
-               } else
-                    puts("\x1b[1m*pass*\x1b[0m");
+               }
                free(fname);
-               printf("%-60s", "lpatom_cmp()");
                if ( lpatom_parse(atom2, s) == -1 ) {
-                    puts("\x1b[1m*fail*\x1b[0m");
                     has_failed = true;
                } else {
                     if ( lpatom_cmp(atom1, atom2) != 0 ) {
-                         puts("\x1b[1m*fail*\x1b[0m");
                          has_failed = true;
-                    } else
-                         puts("\x1b[1m*pass*\x1b[0m");
+                    }
                }
                lpatom_reinit(atom1);
                lpatom_reinit(atom2);
